// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`listed tool surfaces > profile "chatgpt" lists byte-identical tool descriptors 1`] = `
{
  "approve_agent_work": "9c1fc5d454224ad0",
  "approve_decision": "5c6e60617f20a963",
  "check_execution_readiness": "ef8fa4a962f8c2cf",
  "get_agent_status": "cb2dc84b60c01637",
  "get_initiative_pulse": "2f2ad242f07e4c53",
  "get_morning_brief": "3d7678bbf72267b7",
  "get_operator_chronicle": "e6758d86a3a46e1b",
  "handoff_task": "8d26dd0859ab364f",
  "manage_lifecycle": "c411bceb553ad221",
  "orgx_act": "68d9c19743b005f1",
  "orgx_attach": "853a947830b3b8b6",
  "orgx_bootstrap": "c03baa0ea9aefd62",
  "orgx_command_status": "5ff2a83eeb6a1394",
  "orgx_decide": "a9ff361093cdd8a0",
  "orgx_inspect": "d7d071dfdab46a92",
  "orgx_panel_snapshot": "f1bd5f0c96817040",
  "orgx_plan": "1df28d4db3cdabd1",
  "orgx_recommend": "bfe7c13b2aa280de",
  "orgx_search": "98acbeeaf89373de",
  "orgx_spawn": "140fd287f61835b1",
  "orgx_submit_receipt": "a25f40eb8035253b",
  "orgx_widget_decide": "fa9c0e625c15c529",
  "orgx_write": "8a606444c763a06a",
  "reject_decision": "17bcaa4c4238167c",
  "review_artifact": "6dae3f8d6f8dc83f",
  "scaffold_initiative": "93f1b3c5eda771cc",
}
`;

exports[`listed tool surfaces > profile "claude-directory" lists byte-identical tool descriptors 1`] = `
{
  "get_agent_status": "cb2dc84b60c01637",
  "get_initiative_pulse": "2f2ad242f07e4c53",
  "get_morning_brief": "3d7678bbf72267b7",
  "get_operator_chronicle": "e6758d86a3a46e1b",
  "orgx_inspect": "d7d071dfdab46a92",
  "orgx_recommend": "bfe7c13b2aa280de",
  "orgx_search": "98acbeeaf89373de",
}
`;

exports[`listed tool surfaces > profile "claude-plugin" lists byte-identical tool descriptors 1`] = `
{
  "get_agent_status": "cb2dc84b60c01637",
  "get_initiative_pulse": "2f2ad242f07e4c53",
  "get_morning_brief": "3d7678bbf72267b7",
  "get_operator_chronicle": "e6758d86a3a46e1b",
  "orgx_attach": "853a947830b3b8b6",
  "orgx_bootstrap": "c03baa0ea9aefd62",
  "orgx_command_status": "5ff2a83eeb6a1394",
  "orgx_controller_status": "6a393468983ace29",
  "orgx_decide": "a9ff361093cdd8a0",
  "orgx_emit_activity": "d9d7787254656808",
  "orgx_expect": "5d1941f07f7999f6",
  "orgx_inspect": "d7d071dfdab46a92",
  "orgx_recommend": "bfe7c13b2aa280de",
  "orgx_search": "98acbeeaf89373de",
  "orgx_submit_receipt": "a25f40eb8035253b",
  "orgx_tail": "0218a99218cbc731",
}
`;

exports[`listed tool surfaces > profile "commander" lists byte-identical tool descriptors 1`] = `
{
  "check_execution_readiness": "ef8fa4a962f8c2cf",
  "consolidate_pr": "1dbe8c0687680015",
  "get_operator_chronicle": "e6758d86a3a46e1b",
  "orgx_ack_attention": "71e8df12cfd7cd09",
  "orgx_act": "68d9c19743b005f1",
  "orgx_attach": "853a947830b3b8b6",
  "orgx_bootstrap": "c03baa0ea9aefd62",
  "orgx_command_status": "5ff2a83eeb6a1394",
  "orgx_complete_work": "386ddb0838400f31",
  "orgx_create_work": "a971c088f6afd17c",
  "orgx_decide": "a9ff361093cdd8a0",
  "orgx_emit_execution_graph": "a6c2c3778124a522",
  "orgx_events_tail": "8e22a8a27babbb90",
  "orgx_expect": "5d1941f07f7999f6",
  "orgx_inspect": "d7d071dfdab46a92",
  "orgx_plan": "1df28d4db3cdabd1",
  "orgx_poll_attention": "f27254ef8ad58f4e",
  "orgx_poll_question": "e4db513e0d0a6274",
  "orgx_recommend": "bfe7c13b2aa280de",
  "orgx_request_attention": "d80187f14ac873e8",
  "orgx_request_question": "a363d444c8d5e3a2",
  "orgx_search": "98acbeeaf89373de",
  "orgx_spawn": "140fd287f61835b1",
  "orgx_submit_receipt": "a25f40eb8035253b",
  "orgx_tail": "0218a99218cbc731",
  "orgx_write": "8a606444c763a06a",
  "scaffold_initiative": "93f1b3c5eda771cc",
}
`;

exports[`listed tool surfaces > profile "executor" lists byte-identical tool descriptors 1`] = `
{
  "check_execution_readiness": "ef8fa4a962f8c2cf",
  "consolidate_pr": "1dbe8c0687680015",
  "orgx_ack_attention": "71e8df12cfd7cd09",
  "orgx_act": "68d9c19743b005f1",
  "orgx_attach": "853a947830b3b8b6",
  "orgx_bootstrap": "c03baa0ea9aefd62",
  "orgx_command_status": "5ff2a83eeb6a1394",
  "orgx_complete_work": "386ddb0838400f31",
  "orgx_create_work": "a971c088f6afd17c",
  "orgx_emit_activity": "d9d7787254656808",
  "orgx_emit_execution_graph": "a6c2c3778124a522",
  "orgx_events_tail": "8e22a8a27babbb90",
  "orgx_expect": "5d1941f07f7999f6",
  "orgx_inspect": "d7d071dfdab46a92",
  "orgx_plan": "1df28d4db3cdabd1",
  "orgx_poll_attention": "f27254ef8ad58f4e",
  "orgx_poll_question": "e4db513e0d0a6274",
  "orgx_request_attention": "d80187f14ac873e8",
  "orgx_request_question": "a363d444c8d5e3a2",
  "orgx_search": "98acbeeaf89373de",
  "orgx_spawn": "140fd287f61835b1",
  "orgx_submit_receipt": "a25f40eb8035253b",
  "orgx_tail": "0218a99218cbc731",
  "orgx_write": "8a606444c763a06a",
}
`;

exports[`listed tool surfaces > profile "full" lists byte-identical tool descriptors 1`] = `
{
  "approve_agent_work": "9c1fc5d454224ad0",
  "approve_decision": "5c6e60617f20a963",
  "check_execution_readiness": "ef8fa4a962f8c2cf",
  "check_spawn_guard": "f80cbed6c9dd227a",
  "classify_task_model": "1cf802bce55e7150",
  "complete_plan": "53d7f509d1f51a7e",
  "configure_org": "6a322d7d838109ee",
  "configure_outcome_type": "1636782c977c9414",
  "consolidate_pr": "1dbe8c0687680015",
  "create_decision": "f77d2fbb2595ba5c",
  "create_milestone": "304dff9039b1a0bd",
  "create_task": "75343615dd42559c",
  "delegate_agent_task": "1a57580e2ae0c7cb",
  "get_active_sessions": "5cf44753e8c5857e",
  "get_agent_status": "cb2dc84b60c01637",
  "get_decision_history": "fca0a4565d13a12d",
  "get_initiative_pulse": "2f2ad242f07e4c53",
  "get_initiative_stream_state": "6a9bbeeb35988f52",
  "get_morning_brief": "3d7678bbf72267b7",
  "get_my_trust_context": "7de2516cdde77110",
  "get_operator_chronicle": "e6758d86a3a46e1b",
  "get_outcome_attribution": "6cf5850ce1f8ff38",
  "get_pending_decisions": "44c2d36ff446d550",
  "get_relevant_learnings": "8c6771583585f1fe",
  "get_scoring_signals": "600fb01b4147b11a",
  "handoff_task": "8d26dd0859ab364f",
  "improve_plan": "5ca1f4ed19bc9c13",
  "manage_lifecycle": "c411bceb553ad221",
  "orgx_ack_attention": "71e8df12cfd7cd09",
  "orgx_act": "68d9c19743b005f1",
  "orgx_apply_changeset": "648928a040069aa4",
  "orgx_attach": "853a947830b3b8b6",
  "orgx_bootstrap": "c03baa0ea9aefd62",
  "orgx_command_status": "5ff2a83eeb6a1394",
  "orgx_complete_work": "386ddb0838400f31",
  "orgx_controller_status": "6a393468983ace29",
  "orgx_create_work": "a971c088f6afd17c",
  "orgx_decide": "a9ff361093cdd8a0",
  "orgx_describe_action": "82cf14a2c074480d",
  "orgx_describe_tool": "654f6a2bfad82666",
  "orgx_emit_activity": "d9d7787254656808",
  "orgx_emit_execution_graph": "a6c2c3778124a522",
  "orgx_events_tail": "8e22a8a27babbb90",
  "orgx_expect": "5d1941f07f7999f6",
  "orgx_free_audit": "c45dedf3fd834e44",
  "orgx_inspect": "d7d071dfdab46a92",
  "orgx_panel_snapshot": "f1bd5f0c96817040",
  "orgx_plan": "1df28d4db3cdabd1",
  "orgx_poll_attention": "f27254ef8ad58f4e",
  "orgx_poll_question": "e4db513e0d0a6274",
  "orgx_recommend": "bfe7c13b2aa280de",
  "orgx_request_attention": "d80187f14ac873e8",
  "orgx_request_question": "a363d444c8d5e3a2",
  "orgx_search": "98acbeeaf89373de",
  "orgx_spawn": "140fd287f61835b1",
  "orgx_submit_receipt": "a25f40eb8035253b",
  "orgx_tail": "0218a99218cbc731",
  "orgx_widget_decide": "fa9c0e625c15c529",
  "orgx_write": "8a606444c763a06a",
  "pin_workstream": "10dc7ea689cd350f",
  "query_org_memory": "b28dd1af2396976d",
  "queue_action": "86f1ea089aab9dd2",
  "recall_memory": "2e1f7d749a0bc1d3",
  "recommend_next_action": "708a1b9d05eeb17f",
  "record_outcome": "420628756f38d695",
  "record_plan_edit": "d11861588a6b3aba",
  "record_quality_score": "16d6b3dc27156af3",
  "reject_decision": "17bcaa4c4238167c",
  "remember_decision": "f69aebe2015e7f10",
  "request_independent_artifact_review": "2135133545a5582f",
  "resume_plan_session": "425c95c2d949e186",
  "review_artifact": "6dae3f8d6f8dc83f",
  "scaffold_initiative": "93f1b3c5eda771cc",
  "score_next_up_queue": "270cd5728fc226b0",
  "scoring_config": "577a7406093f7c26",
  "spawn_agent_task": "3a83f8a93d656c9b",
  "start_autonomous_session": "248f68c4fa45b3a9",
  "start_plan_session": "2bba985c0718f01d",
  "stats": "4764f1a0e76b264b",
  "submit_learning": "31a25d5b3d0d5999",
  "sync_client_state": "d1f546742148b294",
  "track_project_progress": "7191deadbec0a189",
  "update_stream_progress": "6ea856b431786b7a",
  "validate_studio_content": "567a4df1850cc44b",
  "workspace": "7490ccc2fe939fcf",
}
`;

exports[`listed tool surfaces > profile "memory" lists byte-identical tool descriptors 1`] = `
{
  "orgx_attach": "853a947830b3b8b6",
  "orgx_bootstrap": "c03baa0ea9aefd62",
  "orgx_decide": "a9ff361093cdd8a0",
  "orgx_expect": "5d1941f07f7999f6",
  "orgx_inspect": "d7d071dfdab46a92",
  "orgx_recommend": "bfe7c13b2aa280de",
  "orgx_search": "98acbeeaf89373de",
  "orgx_submit_receipt": "a25f40eb8035253b",
}
`;

exports[`listed tool surfaces > profile "observer" lists byte-identical tool descriptors 1`] = `
{
  "get_operator_chronicle": "e6758d86a3a46e1b",
  "orgx_bootstrap": "c03baa0ea9aefd62",
  "orgx_command_status": "5ff2a83eeb6a1394",
  "orgx_decide": "a9ff361093cdd8a0",
  "orgx_events_tail": "8e22a8a27babbb90",
  "orgx_inspect": "d7d071dfdab46a92",
  "orgx_plan": "1df28d4db3cdabd1",
  "orgx_poll_attention": "f27254ef8ad58f4e",
  "orgx_poll_question": "e4db513e0d0a6274",
  "orgx_recommend": "bfe7c13b2aa280de",
  "orgx_search": "98acbeeaf89373de",
  "orgx_tail": "0218a99218cbc731",
}
`;

exports[`listed tool surfaces > profile "planner" lists byte-identical tool descriptors 1`] = `
{
  "orgx_act": "68d9c19743b005f1",
  "orgx_bootstrap": "c03baa0ea9aefd62",
  "orgx_command_status": "5ff2a83eeb6a1394",
  "orgx_decide": "a9ff361093cdd8a0",
  "orgx_expect": "5d1941f07f7999f6",
  "orgx_inspect": "d7d071dfdab46a92",
  "orgx_plan": "1df28d4db3cdabd1",
  "orgx_poll_attention": "f27254ef8ad58f4e",
  "orgx_poll_question": "e4db513e0d0a6274",
  "orgx_request_attention": "d80187f14ac873e8",
  "orgx_request_question": "a363d444c8d5e3a2",
  "orgx_search": "98acbeeaf89373de",
  "orgx_write": "8a606444c763a06a",
  "scaffold_initiative": "93f1b3c5eda771cc",
}
`;

exports[`listed tool surfaces > profile "read-only" lists byte-identical tool descriptors 1`] = `
{
  "get_agent_status": "cb2dc84b60c01637",
  "get_initiative_pulse": "2f2ad242f07e4c53",
  "get_morning_brief": "3d7678bbf72267b7",
  "get_operator_chronicle": "e6758d86a3a46e1b",
  "orgx_inspect": "d7d071dfdab46a92",
  "orgx_recommend": "bfe7c13b2aa280de",
  "orgx_search": "98acbeeaf89373de",
}
`;

exports[`listed tool surfaces > profile "v2" lists byte-identical tool descriptors 1`] = `
{
  "approve_agent_work": "9c1fc5d454224ad0",
  "approve_decision": "5c6e60617f20a963",
  "check_execution_readiness": "ef8fa4a962f8c2cf",
  "consolidate_pr": "1dbe8c0687680015",
  "delegate_agent_task": "1a57580e2ae0c7cb",
  "get_agent_status": "cb2dc84b60c01637",
  "get_initiative_pulse": "2f2ad242f07e4c53",
  "get_morning_brief": "3d7678bbf72267b7",
  "get_operator_chronicle": "e6758d86a3a46e1b",
  "handoff_task": "8d26dd0859ab364f",
  "manage_lifecycle": "c411bceb553ad221",
  "orgx_ack_attention": "71e8df12cfd7cd09",
  "orgx_act": "68d9c19743b005f1",
  "orgx_attach": "853a947830b3b8b6",
  "orgx_bootstrap": "c03baa0ea9aefd62",
  "orgx_command_status": "5ff2a83eeb6a1394",
  "orgx_controller_status": "6a393468983ace29",
  "orgx_decide": "a9ff361093cdd8a0",
  "orgx_emit_activity": "d9d7787254656808",
  "orgx_emit_execution_graph": "a6c2c3778124a522",
  "orgx_expect": "5d1941f07f7999f6",
  "orgx_inspect": "d7d071dfdab46a92",
  "orgx_panel_snapshot": "f1bd5f0c96817040",
  "orgx_plan": "1df28d4db3cdabd1",
  "orgx_poll_attention": "f27254ef8ad58f4e",
  "orgx_poll_question": "e4db513e0d0a6274",
  "orgx_recommend": "bfe7c13b2aa280de",
  "orgx_request_attention": "d80187f14ac873e8",
  "orgx_request_question": "a363d444c8d5e3a2",
  "orgx_search": "98acbeeaf89373de",
  "orgx_spawn": "140fd287f61835b1",
  "orgx_submit_receipt": "a25f40eb8035253b",
  "orgx_tail": "0218a99218cbc731",
  "orgx_widget_decide": "fa9c0e625c15c529",
  "orgx_write": "8a606444c763a06a",
  "query_org_memory": "b28dd1af2396976d",
  "recall_memory": "2e1f7d749a0bc1d3",
  "recommend_next_action": "708a1b9d05eeb17f",
  "reject_decision": "17bcaa4c4238167c",
  "request_independent_artifact_review": "2135133545a5582f",
  "review_artifact": "6dae3f8d6f8dc83f",
  "scaffold_initiative": "93f1b3c5eda771cc",
  "spawn_agent_task": "3a83f8a93d656c9b",
  "track_project_progress": "7191deadbec0a189",
}
`;
